Apply near miss

--- a/Hart_disease_prediction_for_practice.ipynb
+++ b/Hart_disease_prediction_for_practice.ipynb
@@ -2640,6 +2640,412 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Random Forest\n",
+        "rf = RandomForestClassifier(random_state=100)\n",
+        "rf.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions = rf.predict(x_test)\n",
+        "print(classification_report(y_test, predictions))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions)))\n",
+        "\n",
+        "\n",
+        "#Decison Tree\n",
+        "DT = DecisionTreeClassifier()\n",
+        "DT.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions1 = DT.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions1))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions1))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions1)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# XGB classifier machine object\n",
+        "XGB = XGBClassifier()\n",
+        "# train the model on train set\n",
+        "XGB.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions2 = XGB.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions2))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions2))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions2)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# KNN classifier machine object\n",
+        "KNN =  KNeighborsClassifier()\n",
+        "# train the model on train set\n",
+        "KNN.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions3 = KNN.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions3))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions3))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions3)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# support vector machine object\n",
+        "svm = SVC(kernel='linear')\n",
+        "# train the model on train set\n",
+        "svm.fit(x_train_res, y_train_res.ravel())\n",
+        "predictions4 = svm.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions4))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions4))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions4)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YEX9UW2zpbCV",
+        "outputId": "6e75d624-f012-434e-8a4c-b02b501a05b3"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.70      0.53      0.60        30\n",
+            "           1       0.55      0.71      0.62        24\n",
+            "\n",
+            "    accuracy                           0.61        54\n",
+            "   macro avg       0.62      0.62      0.61        54\n",
+            "weighted avg       0.63      0.61      0.61        54\n",
+            "\n",
+            "mse= 0.3888888888888889\n",
+            "msle= 0.18684283874596716\n",
+            "mae= 0.3888888888888889\n",
+            "rmse= 0.6236095644623235\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.48      0.50      0.49        30\n",
+            "           1       0.35      0.33      0.34        24\n",
+            "\n",
+            "    accuracy                           0.43        54\n",
+            "   macro avg       0.42      0.42      0.42        54\n",
+            "weighted avg       0.42      0.43      0.42        54\n",
+            "\n",
+            "mse= 0.5740740740740741\n",
+            "msle= 0.2758156191011896\n",
+            "mae= 0.5740740740740741\n",
+            "rmse= 0.7576767609436587\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.61      0.47      0.53        30\n",
+            "           1       0.48      0.62      0.55        24\n",
+            "\n",
+            "    accuracy                           0.54        54\n",
+            "   macro avg       0.55      0.55      0.54        54\n",
+            "weighted avg       0.55      0.54      0.54        54\n",
+            "\n",
+            "mse= 0.46296296296296297\n",
+            "msle= 0.22243195088805617\n",
+            "mae= 0.46296296296296297\n",
+            "rmse= 0.6804138174397717\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.67      0.47      0.55        30\n",
+            "           1       0.52      0.71      0.60        24\n",
+            "\n",
+            "    accuracy                           0.57        54\n",
+            "   macro avg       0.59      0.59      0.57        54\n",
+            "weighted avg       0.60      0.57      0.57        54\n",
+            "\n",
+            "mse= 0.42592592592592593\n",
+            "msle= 0.20463739481701163\n",
+            "mae= 0.42592592592592593\n",
+            "rmse= 0.6526300069150406\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.67      0.40      0.50        30\n",
+            "           1       0.50      0.75      0.60        24\n",
+            "\n",
+            "    accuracy                           0.56        54\n",
+            "   macro avg       0.58      0.57      0.55        54\n",
+            "weighted avg       0.59      0.56      0.54        54\n",
+            "\n",
+            "mse= 0.4444444444444444\n",
+            "msle= 0.21353467285253394\n",
+            "mae= 0.4444444444444444\n",
+            "rmse= 0.6666666666666666\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#apply near miss\n",
+        "from imblearn.under_sampling import NearMiss\n",
+        "nr = NearMiss()\n",
+        "\n",
+        "x_train_miss, y_train_miss = nr.fit_resample(x_train, y_train.ravel())"
+      ],
+      "metadata": {
+        "id": "ak-YZLy3prGG"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Near miss result\n",
+        "print('After undersampling, the shape of train_X: {}'.format(x_train_miss.shape))\n",
+        "print('After UnderSampling, the shape of train_y: {} \\n'.format(y_train_miss.shape))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(\"Before UnderSampling, counts of label '1': {}\".format(sum(y_train == 1)))\n",
+        "print(\"Before UnderSampling, counts of label '0': {}\".format(sum(y_train == 0)))\n",
+        "print(\"After UnderSampling, counts of label '1': {}\".format(sum(y_train_miss == 1)))\n",
+        "print(\"After UnderSampling, counts of label '0': {}\".format(sum(y_train_miss == 0)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j5gUdOd1ptuz",
+        "outputId": "202fabc0-2d5a-4b45-c29a-c988590f8649"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "After undersampling, the shape of train_X: (192, 3)\n",
+            "After UnderSampling, the shape of train_y: (192,) \n",
+            "\n",
+            "Before UnderSampling, counts of label '1': 96\n",
+            "Before UnderSampling, counts of label '0': 120\n",
+            "After UnderSampling, counts of label '1': 96\n",
+            "After UnderSampling, counts of label '0': 96\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Random Forest\n",
+        "rf2 = RandomForestClassifier(random_state=100)\n",
+        "rf2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions = rf2.predict(x_test)\n",
+        "print(classification_report(y_test, predictions))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions)))\n",
+        "\n",
+        "\n",
+        "#Decison Tree\n",
+        "DT2 = DecisionTreeClassifier()\n",
+        "DT2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions1 = DT2.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions1))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions1))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions1))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions1)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# XGB classifier machine object\n",
+        "XGB2 = XGBClassifier()\n",
+        "# train the model on train set\n",
+        "XGB2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions2 = XGB2.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions2))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions2))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions2))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions2)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# KNN classifier machine object\n",
+        "KNN2 =  KNeighborsClassifier()\n",
+        "# train the model on train set\n",
+        "KNN2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions3 = KNN2.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions3))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions3))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions3))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions3)))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# support vector machine object\n",
+        "svm2 = SVC(kernel='linear')\n",
+        "# train the model on train set\n",
+        "svm2.fit(x_train_miss, y_train_miss.ravel())\n",
+        "predictions4 = svm2.predict(x_test)\n",
+        "# print classification report\n",
+        "print(classification_report(y_test, predictions4))\n",
+        "#import result of mse\n",
+        "print(\"mse=\",  metrics.mean_squared_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"msle=\",  metrics.mean_squared_log_error(y_test, predictions4))\n",
+        "#import result of mae\n",
+        "print(\"mae=\", metrics.mean_absolute_error(y_test, predictions4))\n",
+        "#import result of rmse\n",
+        "print(\"rmse=\", np.sqrt(metrics.mean_squared_error(y_test, predictions4)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ALCA1E1zpzfI",
+        "outputId": "2d1d195e-d295-4dc2-d85c-af363d0bf89d"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.58      0.37      0.45        30\n",
+            "           1       0.46      0.67      0.54        24\n",
+            "\n",
+            "    accuracy                           0.50        54\n",
+            "   macro avg       0.52      0.52      0.50        54\n",
+            "weighted avg       0.52      0.50      0.49        54\n",
+            "\n",
+            "mse= 0.5\n",
+            "msle= 0.24022650695910064\n",
+            "mae= 0.5\n",
+            "rmse= 0.7071067811865476\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.58      0.37      0.45        30\n",
+            "           1       0.46      0.67      0.54        24\n",
+            "\n",
+            "    accuracy                           0.50        54\n",
+            "   macro avg       0.52      0.52      0.50        54\n",
+            "weighted avg       0.52      0.50      0.49        54\n",
+            "\n",
+            "mse= 0.5\n",
+            "msle= 0.24022650695910064\n",
+            "mae= 0.5\n",
+            "rmse= 0.7071067811865476\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.61      0.37      0.46        30\n",
+            "           1       0.47      0.71      0.57        24\n",
+            "\n",
+            "    accuracy                           0.52        54\n",
+            "   macro avg       0.54      0.54      0.51        54\n",
+            "weighted avg       0.55      0.52      0.51        54\n",
+            "\n",
+            "mse= 0.48148148148148145\n",
+            "msle= 0.2313292289235784\n",
+            "mae= 0.48148148148148145\n",
+            "rmse= 0.693888666488711\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.64      0.47      0.54        30\n",
+            "           1       0.50      0.67      0.57        24\n",
+            "\n",
+            "    accuracy                           0.56        54\n",
+            "   macro avg       0.57      0.57      0.55        54\n",
+            "weighted avg       0.58      0.56      0.55        54\n",
+            "\n",
+            "mse= 0.4444444444444444\n",
+            "msle= 0.21353467285253394\n",
+            "mae= 0.4444444444444444\n",
+            "rmse= 0.6666666666666666\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.68      0.43      0.53        30\n",
+            "           1       0.51      0.75      0.61        24\n",
+            "\n",
+            "    accuracy                           0.57        54\n",
+            "   macro avg       0.60      0.59      0.57        54\n",
+            "weighted avg       0.61      0.57      0.57        54\n",
+            "\n",
+            "mse= 0.42592592592592593\n",
+            "msle= 0.20463739481701168\n",
+            "mae= 0.42592592592592593\n",
+            "rmse= 0.6526300069150406\n"
+          ]
+        }
+      ]
     }
   ]
 }
