--- a/EDGE_classwork_17_7_2023.ipynb
+++ b/EDGE_classwork_17_7_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMg+zBpYBQGSKBoO5gSBUjr",
+      "authorship_tag": "ABX9TyOLyGVDik1ulYkSibwGOdNb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "6DeCGu7Zl2ie"
       },
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "yVm5TYuAqRmD"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "ItKQZvNmqmUM"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "id": "i6Ek3G7fqycT",
         "outputId": "748f5a99-1da7-41c7-816b-ec2a24d0a5d3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -111,7 +111,7 @@
         "id": "nQSX_wMPq_Us",
         "outputId": "fadb088c-7a07-4288-859f-b06d767d9e39"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "zp7DuJftro3z"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "WiGveP26rLFL"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
       "metadata": {
         "id": "SkW51AVhrTSL"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "RVY0t2thsN6r"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "id": "B0-UUGu2wZ-s",
         "outputId": "22fc38ad-4608-4e27-b23e-87dfacf87ab7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
         "id": "YtpJdOhMJuOy",
         "outputId": "ecb46533-731f-4976-f496-a796999e58be"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +267,7 @@
       "metadata": {
         "id": "FGSL2zHSKav7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +279,7 @@
       "metadata": {
         "id": "mP5qvD4BLG3c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
         "id": "8R_J8C_QLRHD",
         "outputId": "83313d09-9fad-4467-9762-f5322ae2a6ed"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,7 +606,7 @@
         "id": "1Ew9fGHTLVLd",
         "outputId": "21d7d30b-6559-4e5b-92bb-800eeccb8f20"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -966,7 +966,7 @@
         "id": "le4_8PMnLckD",
         "outputId": "590dac4b-86b1-4a29-f808-c7291e2ef92a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -992,7 +992,7 @@
         "id": "IX4_oHK1Lljc",
         "outputId": "5d8987bd-bda1-4b97-8f01-a9dac507e7ee"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1021,7 +1021,7 @@
       "metadata": {
         "id": "J1XBbjJ4MyGs"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1037,7 +1037,7 @@
         "id": "TV1pWhPhNYE8",
         "outputId": "bc86100e-18ac-46b6-a318-a6a924655886"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1065,7 +1065,7 @@
         "id": "rU8ErUbdNgjj",
         "outputId": "5a311534-fdc8-49e5-8185-199d4cc8785d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1095,7 +1095,7 @@
         "id": "GlKrWvdLNyZT",
         "outputId": "9d629387-ad68-4bd7-ab39-188ab22ea212"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1151,7 +1151,7 @@
         "id": "j5dRGrXrOaS7",
         "outputId": "09e50e1b-61e6-455c-9c21-2904d5ae6663"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,7 +1191,7 @@
       "metadata": {
         "id": "r7qtloghO8D0"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1206,7 +1206,7 @@
         "id": "VLeAD8JuP64s",
         "outputId": "7534d6f6-df82-4854-b25f-0bbab94983e4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1250,7 +1250,7 @@
         "id": "QIIEVp6zQIfb",
         "outputId": "8ca4c6d6-7e9a-413a-8ef4-e0a22ace2911"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1560,7 +1560,7 @@
         "id": "E8S6QcbZQMgs",
         "outputId": "69e66d32-ecd0-43bc-bc89-00aa6cbe0ecb"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1579,7 +1579,7 @@
       "metadata": {
         "id": "sOuh5wIDRmvr"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1594,7 +1594,7 @@
         "id": "H1kawvGST1Fz",
         "outputId": "370eadc6-4f64-4a93-95cc-cd481337bc12"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1632,7 +1632,7 @@
       "metadata": {
         "id": "tR1x1i_VT33y"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1647,7 +1647,7 @@
         "id": "DQA-qKvRUqns",
         "outputId": "b7a23c39-c467-4854-f70e-80db03262c84"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1670,7 +1670,7 @@
       "metadata": {
         "id": "qGtoiIFPUtgb"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1685,7 +1685,7 @@
       "metadata": {
         "id": "OTYK-ki2VKE0"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1702,7 +1702,7 @@
         "id": "c9NNWmcbVj0z",
         "outputId": "553bdfd0-8119-40b3-ed3e-977018d484dd"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1727,7 +1727,7 @@
         "id": "I5iX84Q-WFW7",
         "outputId": "5fd44584-442f-4216-9ef0-ebbc3501eb3c"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1765,7 +1765,7 @@
         "id": "xTco2nNvWSk0",
         "outputId": "4e7b9a9c-0253-4325-f23c-c38687c9f7af"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1789,7 +1789,7 @@
         "id": "olbUqNUMXGWc",
         "outputId": "670ad333-25fb-4dab-cd57-f86b68015ed7"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1814,7 +1814,7 @@
         "id": "bfFMhXNBXeJU",
         "outputId": "a7727320-f617-499b-874f-98c91139b05f"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1838,7 +1838,7 @@
         "id": "kTNbGguXXxiq",
         "outputId": "f7f3598c-4d0f-448d-f99a-1be3612b8d96"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1892,7 +1892,7 @@
         "id": "60WmQCK7X7ui",
         "outputId": "fff1aa56-7c83-46fc-b987-e727ab8a8966"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1916,7 +1916,7 @@
         "id": "Zl6_a8byYsH8",
         "outputId": "a34808b7-63b9-4e50-808a-0a185245e352"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1940,7 +1940,7 @@
         "id": "lWuFKCwVZG8k",
         "outputId": "b7832dfa-ea27-47af-bd6f-5d3ed689f178"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1962,9 +1962,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ff1riDrsZgNL",
-        "outputId": "583c2c55-6777-4e60-8cdc-87513e09e069"
+        "outputId": "98696fb8-e9fc-4e64-cca9-a4430c703a8e"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1976,10 +1976,169 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Cross-validation techniques"
+      ],
+      "metadata": {
+        "id": "uO8kWhI-oYu0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn import model_selection"
+      ],
+      "metadata": {
+        "id": "8VqAJEHqZoVa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lr = LogisticRegression(max_iter=1000, random_state=42)\n",
+        "\n",
+        "#getting accuracy scores\n",
+        "cv_scores_lr = cross_val_score(lr, X, Y, cv=5)"
+      ],
+      "metadata": {
+        "id": "NCU5PrxxogdU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#calculate mean accuracy\n",
+        "mean_accuracy_lr = np.mean(cv_scores_lr) * 100\n",
+        "mean_accuracy_lr = round(mean_accuracy_lr, 2)"
+      ],
+      "metadata": {
+        "id": "HXmDjvRcpCOa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#printing the cross validation\n",
+        "print(\"Cross-validation Scores:\", cv_scores_lr)\n",
+        "print(\"Mean Accuracy (%):\", mean_accuracy_lr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "32G9Jd7Qp_gb",
+        "outputId": "2274510f-7bc3-4318-aa90-ce1209f53e0e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cross-validation Scores: [0.83  0.845 0.845 0.845 0.845]\n",
+            "Mean Accuracy (%): 84.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "\n",
+        "# Creating a KFold object with k=5 (5-fold cross-validation)\n",
+        "kfold = KFold(n_splits=10)\n",
+        "\n",
+        "# Performing cross-validation and getting accuracy scores\n",
+        "scores = cross_val_score(rf, X, Y, cv=kfold)\n",
+        "\n",
+        "# Printing the accuracy scores for each fold\n",
+        "for fold, score in enumerate(scores):\n",
+        "    print(f\"Fold {fold+1} Accuracy: {score}\")\n",
+        "\n",
+        "# Printing the mean accuracy across all folds\n",
+        "mean_accuracy = np.mean(scores)\n",
+        "print(\"Mean Accuracy:\", mean_accuracy)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 254
+        },
+        "id": "mqeXpM-iqSgC",
+        "outputId": "dadc54a7-e1e1-40a1-e693-0ddc73e687e9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-64-64d0164cf69c>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Creating a KFold object with k=5 (5-fold cross-validation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mkfold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKFold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Performing cross-validation and getting accuracy scores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'KFold' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "\n",
+        "# Creating a KFold object with k=5 (5-fold cross-validation)\n",
+        "kfold = KFold(n_splits=10)\n",
+        "\n",
+        "# Performing cross-validation and getting accuracy scores\n",
+        "scores = cross_val_score(rf, X, Y, cv=kfold)\n",
+        "\n",
+        "# Printing the accuracy scores for each fold\n",
+        "for fold, score in enumerate(scores):\n",
+        "    print(f\"Fold {fold+1} Accuracy: {score}\")\n",
+        "\n",
+        "# Printing the mean accuracy across all folds\n",
+        "mean_accuracy = np.mean(scores)\n",
+        "print(\"Mean Accuracy:\", mean_accuracy)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 245
+        },
+        "id": "DBD0fuT4pX3q",
+        "outputId": "d25ce822-ebc2-4a76-b70f-2e5dafaab341"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-64bdbea09204>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Creating a KFold object with k=5 (5-fold cross-validation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mkfold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKFold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Performing cross-validation and getting accuracy scores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'KFold' is not defined"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8VqAJEHqZoVa"
+        "id": "Gt8gEd6Or0AD"
       },
       "execution_count": null,
       "outputs": []
